--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,10 @@
         "intervention/image": "^2.7",
         "laravel/framework": "^8.75",
         "laravel/sanctum": "^2.11",
+        "laravel/socialite": "^5.4",
         "laravel/tinker": "^2.5",
         "laravel/ui": "^3.4",
+        "milon/barcode": "^8.0",
         "proengsoft/laravel-jsvalidation": "^4.6"
     },
     "require-dev": {
